# custom-gamemode-colors

./: .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: build-geode-mod.yml
include/: include.hpp  settings.hpp  state.hpp  utils.hpp
include/ui/: CustomCharacterColorPage.hpp
src/: garage_hooks.cpp  hooks.cpp  main.cpp  menulayer_hooks.cpp  player_hooks.cpp  profile_hooks.cpp  settings.cpp  state.cpp
src/ui/: CustomCharacterColorPage.cpp
